[B]2.0.4[/B]
• Add new 'InfoWall (thumbnails)' view
• Add new 'Wall (thumbnails)' view
• Add icon when item is resumable
• Fix esthetic appearance
• Minnor fixes

[B]2.0.3[/B]
• Add Videolyrics (credits to manfeed)
• Add new 'Next episodes to see' widget
• Replace music videos widgets
• Fix color with lyrics
• Fix banner on music fullscreen
• Fix music visualisation
• Fix esthetic appearance

[B]2.0.2[/B]
• Fix selecting widgets

[B]2.0.1[/B]
• Add possibility to reorder main menu items
• Add possibility to reset main menu items back to default
• Add possibility to show smaller icons for 'Categories' widgets
• Add studios flag icons for movies widgets
• Add shortcuts on power menu to update video/music library
• Fix colordiffuse for studios and labels flag icons
• Minnor fixes

[B]2.0.0[/B]
• Initial release
• Add possibility to hide main menu when selecting widgets
• Add possibility to disable each widget
• Add possibility to hide watched items from recently added widgets
• Add possibility to hide episodes plots to avoid spoilers
• Add possibility to change skin color
• Add possibility to change background color
• Add possibility to change pattern color
• Add possibility to change background opacity
• Add possibility to top and bottom bars opacity
• Add possibility to change weather icons pack
• Add possibility to change studios icons pack
• Add possibility to change genres icons pack
• Add possibility to set splash screen (photo, video or music)
• Add possibility to set number of items to display on widgets
• Add possibility to backup/restore skin settings
• Add possibility to disable zoom effect
• Add possibility to enable/disable music visualisation effects on background
• Add possibility to enable/disable video on background
• Add possibility to hide notification popup during playback
• Add possibility to show music visualisation screen when playing song
• Add possibility to ExtraFanarts on music visualisation screen