@@ -26,14 +26,16 @@
 					<param name="top" value="-20" />
 					<param name="flipx" value="true" />
 				</include>
-				<control type="image">
+				<control type="multiimage">
 					<left>38</left>
 					<right>36</right>
 					<top>115</top>
 					<height>644</height>
 					<fadetime>300</fadetime>
-					<texture border="2" fallback="special://skin/extras/home-images/movie.jpg" background="true">$VAR[FanartImageVar]</texture>
+					<imagepath border="2" fallback="special://skin/extras/home-images/movie.jpg" background="true">$VAR[FanartImageVar]</imagepath>
 					<aspectratio align="center" aligny="bottom">scale</aspectratio>
+					<timeperimage>3000</timeperimage>
+                    <randomize>true</randomize>
 				</control>
 				<control type="image">
 					<left>38</left>
