@@ -8,7 +8,7 @@
 			<visible>Control.IsVisible(505)</visible>
 			<include>Visible_Right</include>
 			<control type="panel" id="505">
-				<left>490</left>
+				<left>548</left>
 				<top>0</top>
 				<right>15</right>
 				<height>100%</height>
@@ -25,7 +25,6 @@
 				<animation effect="slide" end="20,0" time="0" condition="String.IsEqual(Skin.AspectRatio,21:9)">Conditional</animation>
 				<itemlayout height="370" width="600">
 					<control type="group">
-						<left>58</left>
 						<top>120</top>
 						<include>InfoWallThumbsLayout</include>
 					</control>
@@ -33,7 +32,6 @@
 				<focusedlayout height="445" width="320">
 					<control type="group">
 						<depth>DepthContentPopout</depth>
-						<left>58</left>
 						<animation effect="zoom" start="100" end="110" time="200" tween="sine" easing="inout" center="310,280" condition="!Skin.HasSetting(no_animations)">Focus</animation>
 						<animation effect="zoom" start="110" end="100" time="200" tween="sine" easing="inout" center="310,280" condition="!Skin.HasSetting(no_animations)">UnFocus</animation>
 						<top>120</top>
