@@ -1,6 +1,7 @@
 [B]2.0.4[/B]
 • Add new 'InfoWall (thumbnails)' view
 • Add new 'Wall (thumbnails)' view
+• Add extrafanarts support for 'Fanart' view
 • Add icon when item is resumable
 • Fix esthetic appearance
 • Minnor fixes
